Fix munitions, armament loadout alignment

--- a/Cyberrats/Cyberrats.css
+++ b/Cyberrats/Cyberrats.css
@@ -381,6 +381,16 @@ input.hasammo[value="true"] + span.ammo {
   display: flex;
 }
 
+span.entire {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+input.weapon {
+  width: 12em;
+}
+
 
 input.header-input {
   margin: 0;
